--- a/data/descriptions/hosp/diagnoses_icd.yml
+++ b/data/descriptions/hosp/diagnoses_icd.yml
@@ -1,4 +1,4 @@
-dataset_description: "International Classification of Diseases (ICD) diagnoses assigned to patients during hospital admissions."
+dataset_description: "International Classification of Diseases (ICD) diagnoses assigned to patients during hospital visits."
 
 schema:
   subject_id:
