--- a/data/descriptions/hosp/drgcodes.yml
+++ b/data/descriptions/hosp/drgcodes.yml
@@ -1,4 +1,4 @@
-dataset_description: "Diagnosis-Related Group (DRG) codes assigned to patients during hospital admissions."
+dataset_description: "Diagnosis-Related Group (DRG) codes assigned to patients during hospital visits."
 
 schema:
   subject_id:
