--- a/data/descriptions/icu/inputevents.yml
+++ b/data/descriptions/icu/inputevents.yml
@@ -1,4 +1,4 @@
-dataset_description: "Input of fluids, medications, or other substances into patients during ICU stays."
+dataset_description: "Input of fluids, medications, or other substances into patients during Intensive Care Unit (ICU) stays."
 
 schema:
   subject_id:
