--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .DS_Store
-
 /build/
-
 /data/raw/
 /data/processed/
-
-
 /src/mimicfouretl.egg-info/
-
-.ipynb_checkpoints/*
+bq_credentials/
+*.ipynb_checkpoints
