--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,5 @@ dependencies:
   - jupyterlab==4.1.5
   - ipywidgets==8.1.2
   - google-auth-oauthlib==0.5.2
-  - imbalanced-learn==0.8.1
+  # - imbalanced-learn==0.12.0 needs to be pip installed
   # - google-cloud-bigquery==3.19.0 needs to be pip installed
