--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,6 @@ dependencies:
   - jupyterlab==4.1.5
   - ipywidgets==8.1.2
   - google-auth-oauthlib==0.5.2
+  - optuna==3.6.0
+  - shap==0.45.0
   # - google-cloud-bigquery==3.19.0 needs to be pip installed
